# dictfilter

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml
dictfilter/django/: middleware.py
